--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href ="styles.css" rel="stylesheet">
 </head>
 <body>
+    <h1 class="heading">Profit Loss Calculator</h1>
     <main>
         <label for ="initial-price">initial price <input type ="text" placeholder="enter initial stock price" id="initial-price"/> </label>
        
